feature : add content

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
 
 @layer base {
   :root {
+    --foreground : 0, 84%, 60%;
     --primary :198 93% 88%;
     --primary-foreground :0 0% 100%;
     --primary-background :240 100% 7%;
