--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.cdnfonts.com/css/seven-segment');
+
+
 @layer base {
   :root {
     --foreground : 0, 84%, 60%;
