[WIP] feature : Register form

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,5 +11,6 @@
     --primary :198 93% 88%;
     --primary-foreground :0 0% 100%;
     --primary-background :240, 100%, 3%;
+    --muted-foreground: 218, 11%, 65%
   }
 }
